# Piscine---Python-for-data-science

./: README.md
day_00/ex00/: Hello.py
day_00/ex01/: format_ft_time.py
day_00/ex02/: find_ft_type.py
day_00/ex03/: NULL_not_found.py
day_00/ex04/: whatis.py
day_00/ex05/: building.py
day_00/ex06/: filterstring.py  ft_filter.py
day_00/ex07/: sos.py
day_00/ex08/: Loading.py
day_00/ex09/: pyproject.toml
day_00/ex09/ft_package/: funk.py
day_01/ex00/: give_bmi.py  tester.py
day_01/ex01/: array2D.py  tester.py
day_01/ex02/: load_image.py  tester.py
day_01/ex03/: load_image.py  zoom.py
day_01/ex04/: rotate.py
day_01/ex05/: load_image.py  pimp_image.py  tester.py
day_02/ex00/: load_csv.py
day_02/ex01/: aff_life.py
day_02/ex02/: aff_pop.py  load_csv.py
day_02/ex03/: projection_life.py
day_03/ex00/: S1E9.py  tester.py
day_03/ex01/: S1E7.py  S1E9.py
day_03/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
day_03/ex03/: ft_calculator.py
day_03/ex04/: ft_calculator.py
day_04/ex00/: statistics.py
day_04/ex01/: callLimit.py  in_out.py
day_04/ex03/: new_student.py
